--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    // implementation 'com.android.support:recyclerview-v7:27.1.1'
+    // implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
 
@@ -46,7 +48,9 @@ dependencies {
 
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    // implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    // implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
 }
 repositories {
     mavenCentral()
