--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,9 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation "com.android.support:appcompat-v7:${project.versionSupport}"
+    implementation "com.android.support:design:${project.versionSupport}"
+    implementation "com.android.support:cardview-v7:${project.versionSupport}"
     // implementation 'com.android.support:recyclerview-v7:27.1.1'
     // implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -49,6 +49,7 @@ dependencies {
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation "com.android.support:recyclerview-v7:${project.versionSupport}"
     // implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     // implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
 }
