--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+project.ext {
+    versionSupport = '27.1.1'
+}
+
+
 buildscript {
     ext.kotlin_version = '1.3.0'
     repositories {
